Fixed Storyboard heading on mobile
Int he title

--- a/Pages/Professional_Work/ProfessionalWork.css
+++ b/Pages/Professional_Work/ProfessionalWork.css
@@ -16,16 +16,58 @@ input:hover{
 }
 
 
-h6{
-	display: block;
-	font-size: 40px;
-	text-transform: uppercase;
-	text-decoration: none;
-	letter-spacing: .06em;
-	text-align: center;
-	font-weight: 300;
-	margin: 30px;
-	margin-top: 0px;
-	margin-bottom: 10px;
-	padding-top: 5vh;
+
+@media screen and (min-width: 951px) and (max-width: 100000px){
+
+		h6{
+			display: block;
+			font-size: 40px;
+			text-transform: uppercase;
+			text-decoration: none;
+			letter-spacing: .06em;
+			text-align: center;
+			font-weight: 300;
+			margin: 30px;
+			margin-top: 0px;
+			margin-bottom: 10px;
+			padding-top: 5vh;
+		}
+
+}
+
+
+@media screen and (min-width: 351px) and (max-width: 950px){
+
+		h6{
+			display: block;
+			font-size: 30px;
+			text-transform: uppercase;
+			text-decoration: none;
+			letter-spacing: .06em;
+			text-align: center;
+			font-weight: 300;
+			margin: 30px;
+			margin-top: 0px;
+			margin-bottom: 10px;
+			padding-top: 5vh;
+		}
+
+}
+
+@media screen and (min-width: 1px) and (max-width: 350px){
+
+		h6{
+			display: block;
+			font-size: 20px;
+			text-transform: uppercase;
+			text-decoration: none;
+			letter-spacing: .06em;
+			text-align: center;
+			font-weight: 300;
+			margin: 30px;
+			margin-top: 0px;
+			margin-bottom: 10px;
+			padding-top: 5vh;
+		}
+
 }
